--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <a href="#">Contato</a>
             <a href="#">LogIn</a>
             <a href="#">Recuperar Senha</a>
+            <!-- testeAlex -->
 
         </nav>
     </header>
