--- a/index.html
+++ b/index.html
@@ -1,27 +1,49 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Final Módulo 2</title>
+    <!-- bootstrap below -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- css link -->
     <link rel="stylesheet" href="style.css">
-    <sript src="projetoFinal.js"></sript>
+    <!-- Js Link -->
+    <sript src="projetoFinal.js" defer></sript>
 </head>
-<body>
-    <header>
-        <nav>
-            <a href="#">Home</a>
-            <a href="#">Serviços</a>
-            <a href="#">Cadastro</a>
-            <a href="#">Contato</a>
-            <a href="#">LogIn</a>
-            <a href="#">Recuperar Senha</a>
-            <!-- testeAlex -->
 
+<body>
+    <!-- menu-Navegação -->
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixa-navbar">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Logo</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Planos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Quem somos</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
-    <div id="body">
+    <div id="home" class="ghost"></div> <!--não deixa o texto entrar no header -->
+
+    <main id="body">
         <div class="servicos">
             <p>Criação de layouts personalizados com o apoio de nossos designers profissionais. </p>
         </div>
@@ -37,7 +59,8 @@
             <div>
                 <h3 class="planos">Projeto Único</h3>
                 <br>
-                <p>Acesso para desenvolvimento de um único projeto personalizado como desejar, com apoio da nossa equipe de designers.</p>
+                <p>Acesso para desenvolvimento de um único projeto personalizado como desejar, com apoio da nossa equipe
+                    de designers.</p>
                 <br>
                 <h3 class="valores"> R$500</h3>
             </div>
@@ -52,7 +75,7 @@
 
         </div>
 
-    </div>
+    </main>
 
     <footer>
         <div>
@@ -63,6 +86,7 @@
             <span>Yasmin</span>
         </div>
     </footer>
-    
+
 </body>
+
 </html>
