--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Final Módulo 2</title>
-    <!-- bootstrap below -->
+    <!-- bootstrap Css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <!-- css link -->
     <link rel="stylesheet" href="style.css">
     <!-- Js Link -->
@@ -17,76 +18,102 @@
 
 <body>
     <!-- menu-Navegação -->
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light fixa-navbar">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">Logo</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Planos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Quem somos</a>
-                        </li>
-                    </ul>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Logo</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Planos</a>
+                    </li>
+
+                    <li class="nav-item d-flex ">
+                        <a class="nav-link">Login</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!--Carousel-->
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <div class="carousel-img2"></div>
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>First slide label</h5>
+                    <p>Some representative placeholder content for the first slide.</p>
                 </div>
             </div>
-        </nav>
-    </header>
-    <div id="home" class="ghost"></div> <!--não deixa o texto entrar no header -->
-
-    <main id="body">
-        <div class="servicos">
-            <p>Criação de layouts personalizados com o apoio de nossos designers profissionais. </p>
+            <div class="carousel-item">
+                <div class="carousel-img1"></div>
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Second slide label</h5>
+                    <p>Some representative placeholder content for the second slide.</p>
+                </div>
+            </div>
+            <div class="carousel-item carousel-img3">
+                <div class="d-block w-100 "></div>
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Third slide label</h5>
+                    <p>Some representative placeholder content for the third slide.</p>
+                </div>
+            </div>
         </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+    <!--Fim do Carousel-->
+    <main>
+        <h1 class="titulo-principal">Criação de layouts personalizados com o apoio de nossos designers profissionais.
+        </h1>
 
-        <div class="servicos">
-            <h2>Planos de Assinaturas</h2>
-            <div>
-                <h3 class="planos">Free</h3>
-                <br>
-                <p>Acesso a alguns templates pré-disponíveis, sem a possibilidade de fazer um personalizado novo.</p>
+        <section>
+            <div class="section-chamada">
+                <img src="img/section2.png" alt="">
+                <p><strong>Desenvolva 3x mais rápido e com alta qualidade, com nosso sitema inteligente de layouts.</strong></p>
             </div>
 
-            <div>
-                <h3 class="planos">Projeto Único</h3>
-                <br>
-                <p>Acesso para desenvolvimento de um único projeto personalizado como desejar, com apoio da nossa equipe
-                    de designers.</p>
-                <br>
-                <h3 class="valores"> R$500</h3>
-            </div>
+        
 
-            <div>
-                <h3 class="planos">Premium</h3>
-                <br>
-                <p>Acesso ilimitado a quantos projetos desejar e por tempo indeterminado.</p>
-                <br>
-                <h3 class="valores"> R$200</h3><span>mensais</span>
-            </div>
 
-        </div>
 
+
+
+        </section>
     </main>
+    <footer class="footer">
 
-    <footer>
-        <div>
-            <h2>Projeto desenvolvido por:</h2>
-            <span>Alex</span>
-            <span>Grazi</span>
-            <span>Tárcio</span>
-            <span>Yasmin</span>
-        </div>
     </footer>
 
-</body>
 
+
+    <!--Bootstrap scripts-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+</body>
 </html>
