inplementação do navbar em todas as páginas

--- a/index.html
+++ b/index.html
@@ -92,20 +92,32 @@
         </h1>
 
         <section>
+            <!-- chamada -->
             <div class="section-chamada">
                 <img src="img/section2.png" alt="">
                 <p><strong>Desenvolva 3x mais rápido e com alta qualidade, com nosso sitema inteligente de layouts.</strong></p>
             </div>
+        </section>
+        <section>
+            <!-- nossos planos -->
+            <div class="planos">
 
-        
-
-
-
-
-
+            </div>
         </section>
     </main>
     <footer class="footer">
+        <div>
+            <p>Este site foi desenvolvido para o projeto final do módulo dois</p>
+            <p>Resilia educação Turma 15</p>
+        </div>
+        <div>
+            <ul>
+                <li>Alex</li>
+                <li>Grazi</li>
+                <li>Tárcio</li>
+                <li>Yasmin</li>
+            </ul>
+        </div>
 
     </footer>
 
