--- a/cadastro.html
+++ b/cadastro.html
@@ -21,6 +21,37 @@
         </nav>
     </header>
     <div id="body">
+        <form action="cadastro">
+            <input type="text" name="nome" id="nome" placeholder="Insira seu nome">
+            <br>
+            <input type="email" name="email" id="email" placeholder="Insira seu e-mail">
+            <br>
+            <input type="password" name="senha" id="senha" placeholder="Digite uma senha">
+            <br>
+            <input type="password" name="senha" id="senhaconfirm" placeholder="Confirme sua senha">
+            <br>
+            <input type="number" name="rg" id="rg" placeholder="Insira seu número de RG">
+            <br>
+            <input type="number" name="cep" id="cep" placeholder="Insira seu CEP">
+            <br>
+            <span>
+                <input type="text" name="endereco" id="rua" placeholder="Endereço">
+                <input type="text" name="endereco" id="bairro" placeholder="Bairro">
+            </span>
+            <br>
+            <span>
+                <input type="text" name="endereco" id="cidade" placeholder="Cidade">
+                <input type="text" name="endereco" id="estado" placeholder="Estado">
+            </span>
+            <br>
+            <span>
+                <input type="text" name="endereco" id="num" placeholder="Número">
+                <input type="text" name="endereco" id="compl" placeholder="Complemento (se existir)">
+            </span>
+            <br>
+        </form>
+
+        <button>Enviar</button>
 
     </div>
 
