--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <a href="#">Home</a>
             <a href="#">Serviços</a>
             <a href="#">Cadastro</a>
-            <a href="#">Contato</a>
+            <a href="#contato">Contato</a>
             <a href="#">LogIn</a>
-            <a href="#">Recuperar Senha</a>
+            
 
         </nav>
     </header>
@@ -49,6 +49,32 @@
                 <h3 class="valores"> R$200</h3><span>mensais</span>
             </div>
 
+        </div>
+
+        <div id="msgContato">
+            <h1>Contate-nos</h1>
+            <div id="msg">
+                <h3>Fale Conosco:</h3>
+                <form action="contato">
+                    <input type="text" name="nome" id="nomeCtt" placeholder="Insira seu nome">
+                    <br>
+                    <input type="email" name="emailCtt" id="emailCtt" placeholder="Insira seu e-mail para contato">
+                    <br>
+                    <input type="tel" name="tel" id="telCtt" placeholder="Insira um telefone para contato">
+                    <br>
+                    <input type="text" name="msg" id="assunto" placeholder="Assunto">
+                    <br>
+                    <textarea id="msg" rows="6" placeholder="Escreva sua mensagem"></textarea>
+                </form>
+            </div>
+            <div id="contato">
+                <h3>Contatos:</h3>
+                <p>
+                    Yasmin Ramos <br>
+                    Tel: (13)3333-4444 <br>
+                    E-mail: yasmincoelhoramos@gmail.com
+                </p>
+            </div>
         </div>
 
     </div>
