--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- menu-Navegação -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Logo</a>
+            <a class="navbar-brand" href="index.html">Logo</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -28,14 +28,17 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Planos</a>
+                        <a class="nav-link" href="#planos">Planos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contato">Contato</a>
                     </li>
 
                     <li class="nav-item d-flex ">
-                        <a class="nav-link">Login</a>
+                        <a class="nav-link" href="login.html">Login</a>
                     </li>
                 </ul>
             </div>
@@ -99,13 +102,31 @@
         </section>
         <section>
             <!-- nossos planos -->
-            <div class="planos">
-
-            </div>
+            <div class="planos" id="planos">
+                    <h2>Planos de Assinaturas</h2>
+                    <div>
+                        <h3 class="planos">Free</h3>
+                        <br>
+                        <p>Acesso a alguns templates pré-disponíveis, sem a possibilidade de fazer um personalizado novo.</p>
+                    </div>
+                    <div>
+                        <h3 class="planos">Projeto Único</h3>
+                        <br>
+                        <p>Acesso para desenvolvimento de um único projeto personalizado como desejar, com apoio da nossa equipe de designers.</p>
+                        <br>
+                        <h3 class="valores"> R$500</h3>
+                    </div>
+                    <div>
+                        <h3 class="planos">Premium</h3>
+                        <br>
+                        <p>Acesso ilimitado a quantos projetos desejar e por tempo indeterminado.</p>
+                        <br>
+                        <h3 class="valores"> R$200</h3><span>mensais</span>
+                    </div>
         </section>
     
    <section id="msgContato">
-            <h1>Contate-nos</h1>
+            <h1 id="contato">Contate-nos</h1>
             <div id="msg">
                 <h3>Fale Conosco:</h3>
                 <form action="contato">
