--- a/login.html
+++ b/login.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Final Módulo 2</title>
+    <!-- bootstrap Css -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <!-- Css -->
     <link rel="stylesheet" href="style.css">
     <sript src="projetoFinal.js"></sript>
 </head>
@@ -28,18 +32,23 @@
                         <a class="nav-link" href="#">Planos</a>
                     </li>
 
-                    <li class="nav-item d-flex ">
+                    <li class="nav-item ">
                         <a class="nav-link">Login</a>
                     </li>
+                </ul>
+                <ul class=" navbar-nav d-flex justify-content-end">
+                    <li class="nav-item ">login2</li>
+                    <li class="nav-item ">inscrever-se</li>
                 </ul>
             </div>
         </div>
     </nav>
     </header>
-    <div id="body">
+    <section>
+        <!-- formulário -->
+        
 
-    </div>
-
+    </section>
     <footer>
         <div>
             <h2>Projeto desenvolvido por:</h2>
@@ -49,6 +58,9 @@
             <span>Yasmin</span>
         </div>
     </footer>
-    
+  <!--Bootstrap scripts-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+  crossorigin="anonymous"></script>  
 </body>
 </html>
