cards de planos index

--- a/index.html
+++ b/index.html
@@ -93,15 +93,50 @@
         <section>
             <!-- chamada -->
             <div class="section-chamada">
-                <img src="img/section2.png" alt="">
-                <p><strong>Desenvolva 3x mais rápido e com alta qualidade, com nosso sitema inteligente de layouts.</strong></p>
+                <img src="img/section2.png" alt="" class="img-chamada">
+                <p class="p-chamada"><strong>Desenvolva 3x mais rápido e com alta qualidade, com nosso sitema inteligente de layouts.</strong></p>
             </div>
         </section>
         <section>
             <!-- nossos planos -->
-            <div class="planos">
-
-            </div>
+            <div class="row row-cols-1 row-cols-md-3 g-4 grupo-cards">
+                <div class="col">
+                  <div class="card h-100">
+                    <img src="img/lukas-blazek-mcSDtbWXUZU-unsplash.jpg" class="card-img-top img-planos" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Free</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    </div>
+                    <div class="card-footer">
+                      <small class="text-muted">Last updated 3 mins ago</small>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card h-100">
+                    <img src="img/igor-miske-Px3iBXV-4TU-unsplash.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Projeto Único</h5>
+                      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                    <div class="card-footer">
+                      <strong class="text-muted"><strong>R$ 200/mês</strong></strong>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card h-100">
+                    <img src="img/img1.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Premium</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                    </div>
+                    <div class="card-footer">
+                      <small class="text-muted">Last updated 3 mins ago</small>
+                    </div>
+                  </div>
+                </div>
+              </div>
         </section>
     
    <section id="msgContato">
@@ -127,6 +162,12 @@
                     Tel: (13)3333-4444 <br>
                     E-mail: yasmincoelhoramos@gmail.com
                 </p>
+                
+                <p>
+                    Alex Gomes <br>
+                    Tel: (21)3333-4444 <br>
+                    E-mail: exemplo@gmail.com
+                </p>
             </section>
         </section>
       </main>
@@ -136,12 +177,10 @@
             <p>Resilia educação Turma 15</p>
         </div>
         <div>
-            <ul>
-                <li>Alex</li>
-                <li>Grazi</li>
-                <li>Tárcio</li>
-                <li>Yasmin</li>
-            </ul>
+                <span>Alex</span>
+                <span>Grazi</span>
+                <span>Tárcio</span>
+                <span>Yasmin</span>
         </div>
     </footer>
     <!--Bootstrap scripts-->
