--- a/index.html
+++ b/index.html
@@ -103,10 +103,9 @@
         </section>
         <section>
             <!-- nossos planos -->
-            <div> 
-                <h2 id="planos">Planos</h2> 
+            <div class="container-planos"> 
+                <h2 id="planos" class="planos">Planos</h2> 
                 <div class="row row-cols-1 row-cols-md-3 g-4 grupo-cards">
-                    <!--colocar esse titulo acima dos cards-->
                     <div class="col">
                       <div class="card h-100">
                         <img src="img/lukas-blazek-mcSDtbWXUZU-unsplash.jpg" class="card-img-top img-planos" alt="...">
