--- a/index.html
+++ b/index.html
@@ -97,93 +97,101 @@
             <!-- chamada -->
             <div class="section-chamada">
                 <img src="img/section2.png" alt="" class="img-chamada">
-                <p class="p-chamada"><strong>Desenvolva 3x mais rápido e com alta qualidade, com nosso sitema inteligente de layouts.</strong></p>
+                <p class="p-chamada"><strong>Desenvolva 3x mais rápido e com alta qualidade, com nosso sitema
+                        inteligente de layouts.</strong></p>
             </div>
         </section>
         <section>
             <!-- nossos planos -->
             <div class="row row-cols-1 row-cols-md-3 g-4 grupo-cards">
                 <div class="col">
-                  <div class="card h-100">
-                    <img src="img/lukas-blazek-mcSDtbWXUZU-unsplash.jpg" class="card-img-top img-planos" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Free</h5>
-                      <p class="card-text">Acesso a alguns templates pré-disponíveis, sem a possibilidade de fazer um personalizado novo. </p>
+                    <div class="card h-100">
+                        <img src="img/lukas-blazek-mcSDtbWXUZU-unsplash.jpg" class="card-img-top img-planos" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Free</h5>
+                            <p class="card-text">Acesso a alguns templates pré-disponíveis, sem a possibilidade de fazer
+                                um personalizado novo. </p>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-muted"><strong>Grátis</strong></small>
+                        </div>
                     </div>
-                    <div class="card-footer">
-                      <small class="text-muted"><strong>Grátis</strong></small>
-                    </div>
-                  </div>
                 </div>
                 <div class="col">
-                  <div class="card h-100">
-                    <img src="img/igor-miske-Px3iBXV-4TU-unsplash.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Projeto Único</h5>
-                      <p class="card-text">Acesso para desenvolvimento de um único projeto personalizado como desejar, com apoio da nossa equipe de designers.</p>
+                    <div class="card h-100">
+                        <img src="img/igor-miske-Px3iBXV-4TU-unsplash.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Projeto Único</h5>
+                            <p class="card-text">Acesso para desenvolvimento de um único projeto personalizado como
+                                desejar, com apoio da nossa equipe de designers.</p>
+                        </div>
+                        <div class="card-footer">
+                            <strong class="text-muted"><strong>R$ 200/mês</strong></strong>
+                        </div>
                     </div>
-                    <div class="card-footer">
-                      <strong class="text-muted"><strong>R$ 200/mês</strong></strong>
-                    </div>
-                  </div>
                 </div>
                 <div class="col">
-                  <div class="card h-100">
-                    <img src="img/img1.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Premium</h5>
-                      <p class="card-text">Acesso ilimitado a quantos projetos desejar e por tempo indeterminado.</p>
+                    <div class="card h-100">
+                        <img src="img/img1.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Premium</h5>
+                            <p class="card-text">Acesso ilimitado a quantos projetos desejar e por tempo indeterminado.
+                            </p>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-muted"><strong>500/mês</strong></small>
+                        </div>
                     </div>
-                    <div class="card-footer">
-                      <small class="text-muted"><strong>500/mês</strong></small>
-                    </div>
-                  </div>
                 </div>
-              </div>
+            </div>
         </section>
-    
-   <section id="msgContato">
-            <h1 id="contato">Contate-nos</h1>
-            <div id="msg">
-                <h3>Fale Conosco:</h3>
-                <form action="contato">
-                    <input type="text" name="nome" id="nomeCtt" placeholder="Insira seu nome">
-                    <br>
-                    <input type="email" name="emailCtt" id="emailCtt" placeholder="Insira seu e-mail para contato">
-                    <br>
-                    <input type="tel" name="tel" id="telCtt" placeholder="Insira um telefone para contato">
-                    <br>
-                    <input type="text" name="msg" id="assunto" placeholder="Assunto">
-                    <br>
-                    <textarea id="msg" rows="6" placeholder="Escreva sua mensagem"></textarea>
-                </form>
-            </section>
-            <section id="contato">
-                <h3>Contatos:</h3>
-                <p>
-                    Yasmin Ramos <br>
-                    Tel: (13)3333-4444 <br>
-                    E-mail: yasmincoelhoramos@gmail.com
-                </p>
-                
-                <p>
-                    Alex Gomes <br>
-                    Tel: (21)3333-4444 <br>
-                    E-mail: exemplo@gmail.com
-                </p>
-            </section>
+
+        <!-- contatos -->
+        <form class="contato-section">
+            <h1 id="contato">Contate-nos:</h1>
+
+            <div id="msg" class="msg">
+                <label for="nome-sobrenome">Nome e sobrenome:</label>
+                <input type="text" id="nome-sobrenome" class="input-padrao" required
+                    placeholder="Ex: José da Cunha Carneiro">
+
+                <label for="email">Email:</label>
+                <input type="email" id="email" class="input-padrao" required placeholder="seuemail@dominio.com">
+
+                <label for="telefone">Telefone:</label>
+                <input type="tel" id="telefone" class="input-padrao" required placeholder="(xx) xxxxx-xxxx">
+
+                <label for="mensagem">Mensagem:</label>
+                <textarea name="" id="mensagem" cols="68" rows="10" class="input-padrao" required></textarea>
+            </div>
+        </form>
+
+        <section id="contato">
+            <h3>Contatos:</h3>
+            <p>
+                Yasmin Ramos <br>
+                Tel: (13)3333-4444 <br>
+                E-mail: yasmincoelhoramos@gmail.com
+            </p>
+
+            <p>
+                Alex Gomes <br>
+                Tel: (21)3333-4444 <br>
+                E-mail: exemplo@gmail.com
+            </p>
         </section>
-      </main>
+
+    </main>
     <footer class="footer">
         <div>
             <p>Este site foi desenvolvido para o projeto final do módulo dois</p>
             <p>Resilia educação Turma 15</p>
         </div>
         <div>
-                <span>Alex</span>
-                <span>Grazi</span>
-                <span>Tárcio</span>
-                <span>Yasmin</span>
+            <span>Alex</span>
+            <span>Grazi</span>
+            <span>Tárcio</span>
+            <span>Yasmin</span>
         </div>
     </footer>
     <!--Bootstrap scripts-->
@@ -191,4 +199,5 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
