alguns bugs de inter face resolvidos

--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
                         inteligente de layouts.</strong></p>
             </div>
         </section>
-        <section>
+        <section class="nossos-planos">
             <!-- nossos planos -->
+            <h2 id="planos" class="planos">Planos</h2>
             <div class="row row-cols-1 row-cols-md-3 g-4 grupo-cards">
-                <h2 id="planos" class="planos">Planos</h2>
                 <div class="col">
                     <div class="card h-100">
                         <img src="img/lukas-blazek-mcSDtbWXUZU-unsplash.jpg" class="card-img-top img-planos" alt="...">
