tentando entender o bug do planos

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         </form>
 
         <section id="contato">
-            <h3>Contatos:</h3>
+            <h3>Contato:</h3>
             <p>
                 Yasmin Ramos <br>
                 Tel: (13)3333-4444 <br>
@@ -179,7 +179,7 @@
             <p>
                 Alex Gomes <br>
                 Tel: (21)3333-4444 <br>
-                E-mail: exemplo@gmail.com
+                mail: exemplo@gmail.com
             </p>
         </section>
 
