pagina de cadastro modificada

--- a/cadastro.html
+++ b/cadastro.html
@@ -65,6 +65,8 @@
                 <input type="text" name="endereco" id="compl" placeholder="Complemento (se existir)">
             </span>
             <br>
+            <input type="submit" value="EMAIL" id="verificar-email" />
+            <p></p>
         </form>
 
         <button>Enviar</button>
@@ -73,11 +75,7 @@
 
     <footer>
         <div>
-            <h2>Projeto desenvolvido por:</h2>
-            <span>Alex</span>
-            <span>Grazi</span>
-            <span>Tárcio</span>
-            <span>Yasmin</span>
+            <span>Projeto desenvolvido por: Alex, Grazi e Yasmin</span>
         </div>
     </footer>
     
