--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <title>Projeto Final Módulo 2</title>
     <!-- bootstrap Css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -165,6 +166,8 @@
 
                 <label for="mensagem">Mensagem:</label>
                 <textarea name="" id="mensagem" cols="68" rows="10" class="input-padrao" required></textarea>
+                <input type="submit" value="EMAIL" id="verificar-email" />
+                <p></p>
             </div>
         </form>
 
@@ -187,7 +190,7 @@
     <footer class="footer">
         <div>
                 
-                <span>Projeto desenvolvido para conclusão do Módulo 2 da Resilia. Por: Alex, Grazi, Tárcio e Yasmin</span>
+                <span>Projeto desenvolvido para conclusão do Módulo 2 da Resilia. Por: Alex, Grazi e Yasmin</span>
                 
         </div>
     </footer>
