--- a/login.html
+++ b/login.html
@@ -52,20 +52,25 @@
             <input type="email" name="email" id="email" placeholder="Insira seu e-mail">
             <br>
             <input type="password" name="senha" id="senha" placeholder="Digite uma senha">
-            //validar o campo como e-mail
+            <br>
+            <!--validar o campo como e-mail-->
             <a href="senha.html">Esqueci minha senha</a>
+            <input type="submit" value="EMAIL" id="verificar-email" />
+            <p></p>
+
         </form>
+        <div>
+            <h3>Ainda não possui cadastro?</h3>
+            <p>Cadastre-se<a href="cadastro.html"> aqui!</a></p>
+
+        </div>
 
     </div>
 
     </section>
     <footer>
         <div>
-            <h2>Projeto desenvolvido por:</h2>
-            <span>Alex</span>
-            <span>Grazi</span>
-            <span>Tárcio</span>
-            <span>Yasmin</span>
+            <span>Projeto desenvolvido por: Alex, Grazi e Yasmin</span>
         </div>
     </footer>
   <!--Bootstrap scripts-->
