--- a/index.html
+++ b/index.html
@@ -168,6 +168,8 @@
                 <label for="mensagem">Mensagem:</label>
                 <textarea name="" id="mensagem" cols="68" rows="10" class="input-padrao" required></textarea>
 
+                <input type="submit" value="Enviar formulário" class="enviar">
+
             </div>
         </form>
 
