--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
 
                 <label for="mensagem">Mensagem:</label>
                 <textarea name="" id="mensagem" cols="68" rows="10" class="input-padrao" required></textarea>
+                <button class="submit">Enviar</button>
 
             </div>
         </form>
