--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                                 desejar, com apoio da nossa equipe de designers.</p>
                         </div>
                         <div class="card-footer">
-                            <strong class="text-muted"><strong>R$ 200/mês</strong></strong>
+                            <small class="text-muted"><strong>R$ 200/mês</strong></small>
                         </div>
                     </div>
                 </div>
@@ -144,7 +144,7 @@
                             </p>
                         </div>
                         <div class="card-footer">
-                            <small class="text-muted"><strong>500/mês</strong></small>
+                            <small class="text-muted"><strong>R$ 500/mês</strong></small>
                         </div>
                     </div>
                 </div>
@@ -169,9 +169,9 @@
 
                 <label for="mensagem">Mensagem:</label>
                 <textarea name="" id="mensagem" cols="68" rows="10" class="input-padrao" required></textarea>
-                <button class="submit">Enviar</button>
+                
 
-                <input type="submit" value="Enviar formulário" class="enviar">
+                <input type="submit" value="Enviar formulário" class="enviar" class="submit">
 
             </div>
         </form>
@@ -188,10 +188,7 @@
                         <img src="img/github-icon.png"><strong> <a href="">Alex Gomes</a></strong><br>
                         <img src="img/LinkedIn-icon24.png" alt=""><strong> <a href="https://www.linkedin.com/in/goalex29/" target="_blank">goalex29</a></strong>
                 </li>
-                <li>
-                        <img src="img/github-icon.png"> <strong><a href=""> Graziela Belotto</a></strong><br>
-                        <img src="img/LinkedIn-icon24.png" alt=""><strong> <a href="https://www.linkedin.com/in/grabelotto/" target="_blank">grabelotto</a></strong>
-                </li>
+               
             </ul>
         </section>
 
