--- a/login.html
+++ b/login.html
@@ -56,8 +56,8 @@
                     
                     <input type="submit" value="Enviar formulário" class="enviar">
                     <div class="links-forms">
-                        <a href="">Esqueci minha senha</a>
-                        <a href="">Cadastrar-se</a>
+                        <a href="senha.html">Esqueci minha senha</a>
+                        <a href="cadastro.html">Cadastrar-se</a>
                     </div>
                 </form>
             </div>
