validação de e-mail

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 <textarea name="" id="mensagem" cols="68" rows="10" class="input-padrao" required></textarea>
                 
 
-                <input type="submit" value="Enviar formulário" class="enviar" class="submit">
+                <input type="submit" value="Enviar formulário" class="enviar">
 
             </div>
         </form>
