--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <sript src="projetoFinal.js" defer></sript>
+    <script src="projetoFinal.js" defer></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <title>Projeto Final Módulo 2</title>
     <!-- bootstrap Css -->
@@ -76,10 +76,7 @@
                         <img src="img/github-icon.png"><strong> <a href="">Alex Gomes</a></strong><br>
                         <img src="img/LinkedIn-icon24.png" alt=""><strong> <a href="https://www.linkedin.com/in/goalex29/" target="_blank">goalex29</a></strong>
                 </li>
-                <li>
-                        <img src="img/github-icon.png"> <strong><a href=""> Graziela Belotto</a></strong><br>
-                        <img src="img/LinkedIn-icon24.png" alt=""><strong> <a href="https://www.linkedin.com/in/grabelotto/" target="_blank">grabelotto</a></strong>
-                </li>
+               
             </ul>
         </section>
 
