--- a/cadastro.html
+++ b/cadastro.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="projetoFinal.js" defer></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <title>Projeto Final Módulo 2</title>
+    <!-- bootstrap Css -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <!-- css link -->
     <link rel="stylesheet" href="style.css">
-    <sript src="projetoFinal.js"></sript>
+    <!-- Js Link -->
+    <script src="projetoFinal.js" defer></script>
+
 </head>
+
 <body>
-    <header>
-         <!-- menu-Navegação -->
+    <!-- menu-Navegação -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">Logo</a>
+            <img src="img/logo_75x75.png" alt="logo do site" class="navbar-brand">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -25,9 +34,11 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
-
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#planos">Planos</a>
+                        <a class="nav-link" href="#planos">Planos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contato">Contato</a>
                     </li>
 
                     <li class="nav-item d-flex ">
@@ -37,49 +48,60 @@
             </div>
         </div>
     </nav>
-    </header>
-    <div id="body">
-        <form action="cadastro">
-            <input type="text" name="nome" id="nome" placeholder="Insira seu nome">
+
+    <div id="body" class="form-cadastro">
+        <form action="cadastro" class="filho-cadastro">
+            <h1 class="titulo-cadastro">Cadastre-se</h1>
+            <input type="text" name="nome" id="nome" placeholder="Insira seu nome" class="from-itens">
             <br>
-            <input type="email" name="email" id="email" placeholder="Insira seu e-mail">
+            <input type="email" name="email" id="email" placeholder="Insira seu e-mail" class="from-itens">
             <br>
-            <input type="password" name="senha" id="senha" placeholder="Digite uma senha">
+            <input type="password" name="senha" id="senha" placeholder="Digite uma senha" class="from-itens">
             <br>
-            <input type="password" name="senha" id="senhaconfirm" placeholder="Confirme sua senha">
+            <input type="password" name="senha" id="senhaconfirm" placeholder="Confirme sua senha" class="from-itens">
             <br>
-            <input type="number" name="rg" id="rg" placeholder="Insira seu número de RG">
+            <input type="number" name="rg" id="rg" placeholder="Insira seu número de RG" class="from-itens">
             <br>
-            <input type="number" name="cep" id="cep" placeholder="Insira seu CEP">
+            <input type="number" name="cep" id="cep" placeholder="Insira seu CEP" class="from-itens">
             <br>
-            <span>
-                <input type="text" name="endereco" id="rua" placeholder="Endereço">
-                <input type="text" name="endereco" id="bairro" placeholder="Bairro">
-            </span>
+                <input type="text" name="endereco" id="rua" placeholder="Endereço" class="from-itens">
+                <br>
+                <input type="text" name="endereco" id="bairro" placeholder="Bairro" class="from-itens">
             <br>
-            <span>
-                <input type="text" name="endereco" id="cidade" placeholder="Cidade">
-                <input type="text" name="endereco" id="estado" placeholder="Estado">
-            </span>
+                <input type="text" name="endereco" id="cidade" placeholder="Cidade" class="from-itens">
+                <br>
+                <input type="text" name="endereco" id="estado" placeholder="Estado" class="from-itens">
             <br>
-            <span>
-                <input type="text" name="endereco" id="num" placeholder="Número">
-                <input type="text" name="endereco" id="compl" placeholder="Complemento (se existir)">
-            </span>
+                <input type="text" name="endereco" id="num" placeholder="Número" class="from-itens">
+                <br>
+                <input type="text" name="endereco" id="compl" placeholder="Complemento (se existir)" class="from-itens">
             <br>
-            <input type="submit" value="EMAIL" id="verificar-email" />
+            <input type="submit" value="Enviar" id="verificar-email" class="enviar" />
             <p></p>
         </form>
-
-        <button>Enviar</button>
-
     </div>
+  
 
-    <footer>
-        <div>
-            <span>Projeto desenvolvido por: Alex, Grazi e Yasmin</span>
-        </div>
-    </footer>
-    
+    <section class="contato" id="contato">
+        <h3>Contatos:</h3>
+
+        <ul class="contatos-itens">
+            <li>  
+                    <img src="img/github-icon.png"> <strong><a href="">Yasmin Ramos</a></strong><br> 
+                    <img src="img/LinkedIn-icon24.png" alt=""><strong><a href="https://www.linkedin.com/in/yasmin-coelho-ramos/" target="_blank"> yasmin-coelho-ramos</a></strong>
+            </li>
+            <li>
+                    <img src="img/github-icon.png"><strong> <a href="">Alex Gomes</a></strong><br>
+                    <img src="img/LinkedIn-icon24.png" alt=""><strong> <a href="https://www.linkedin.com/in/goalex29/" target="_blank">goalex29</a></strong>
+            </li>
+           
+        </ul>
+    </section>
+
+</main>
+<footer class="footer">
+  <span>Projeto desenvolvido para conclusão do Módulo 2 da &copy;<strong>Resilia Educação</strong>.
+
 </body>
+
 </html>
