--- a/cadastro.html
+++ b/cadastro.html
@@ -52,29 +52,31 @@
             <h1 class="titulo-cadastro">Cadastre-se</h1>
             <input type="text" name="nome" id="nome" placeholder="Insira seu nome" class="from-itens">
             <br>
-            <input type="email" name="email" id="email" placeholder="Insira seu e-mail" class="from-itens">
+            <input type="email" id="email" name="email" class="infobox" required placeholder="seuemail@dominio.com">
+                <span id="erro" style="color:red">Endereço de e-mail inválido.</span>
+            
             <br>
             <input type="password" name="senha" id="senha" placeholder="Digite uma senha" class="from-itens">
             <br>
-            <input type="password" name="senha" id="senhaconfirm" placeholder="Confirme sua senha" class="from-itens">
+            <input type="password" name="senha" id="confirmeSenha" placeholder="Confirme sua senha" class="from-itens">
             <br>
             <input type="number" name="rg" id="rg" placeholder="Insira seu número de RG" class="from-itens">
             <br>
             <input type="number" name="cep" id="cep" placeholder="Insira seu CEP" class="from-itens">
             <br>
-                <input type="text" name="endereco" id="rua" placeholder="Endereço" class="from-itens">
+                <input type="text" name="endereco" id="endereco" placeholder="Endereço" class="from-itens">
                 <br>
                 <input type="text" name="endereco" id="bairro" placeholder="Bairro" class="from-itens">
             <br>
                 <input type="text" name="endereco" id="cidade" placeholder="Cidade" class="from-itens">
                 <br>
-                <input type="text" name="endereco" id="estado" placeholder="Estado" class="from-itens">
+                <input type="text" name="endereco" id="uf" placeholder="Estado" class="from-itens">
             <br>
                 <input type="text" name="endereco" id="num" placeholder="Número" class="from-itens">
                 <br>
                 <input type="text" name="endereco" id="compl" placeholder="Complemento (se existir)" class="from-itens">
             <br>
-            <input type="submit" value="Enviar" id="verificar-email" class="enviar" />
+            <input type="submit" value="Cadastrar" class="enviar" id="botao">
             <p></p>
         </form>
     </div>
