--- a/senha.html
+++ b/senha.html
@@ -45,7 +45,7 @@
                 <input type="email" id="email" name="email" class="infobox" required placeholder="seuemail@dominio.com">
                 <span id="erro" style="color:red">Endereço de e-mail inválido.</span>
             <p></p>
-            <input type="submit" value="Enviar" class="enviar">
+            <input type="submit" value="Enviar" class="enviar" id="botao">
                 
             </form>
     
